--- a/index.html
+++ b/index.html
@@ -285,5 +285,74 @@ let anak=[
 ["Celana Kids Cream","Rp 169.000"],
 ["Celana Kids Casual","Rp 159.000"],
 ["Celana Kids Elegant","Rp 189.000"]
-]
+];
 
+anak.forEach(a=>{
+document.write(`
+<div class="card">
+<img src="https://source.unsplash.com/400x400/?kids,pants" onclick="openPopup(this.src,'${a[0]}','Celana anak nyaman & stylish','${a[1]}')">
+<div class="card-body">
+<h3>${a[0]}</h3>
+<div class="price">${a[1]}</div>
+<button onclick="addToCart()">Tambah ke Keranjang</button>
+</div>
+</div>
+`);
+});
+</script>
+
+</div>
+</section>
+
+<section class="sale shimmer">
+<h2>RAMADHAN SALE</h2>
+<p>Diskon hingga 25% • Free Gift • Free Ongkir</p>
+<p>Follow kami: Facebook | Instagram | TikTok | WhatsApp</p>
+<p>Alamat Toko: Jl. Fashion Raya No. 21, Jakarta</p>
+</section>
+
+<section class="section">
+<h2>Lokasi Toko</h2>
+<iframe src="https://www.google.com/maps?q=jakarta&output=embed"></iframe>
+</section>
+
+<footer>
+© 2026 Lunatic Fashion Store
+</footer>
+
+<div class="popup" id="popup">
+<span class="close" onclick="closePopup()">×</span>
+<div class="popup-content" id="popup-content"></div>
+</div>
+
+<script>
+let count=0;
+
+function addToCart(){
+count++;
+document.getElementById("cart-count").innerText=count;
+alert("Produk ditambahkan ke keranjang!");
+}
+
+function openPopup(img,title,desc,price){
+document.getElementById("popup").style.display="flex";
+document.getElementById("popup-content").innerHTML=`
+<img src="${img}">
+<h2>${title}</h2>
+<p>${desc}</p>
+<h3>${price}</h3>
+<button onclick="addToCart()">Tambah ke Keranjang</button>
+`;
+}
+
+function closePopup(){
+document.getElementById("popup").style.display="none";
+}
+
+function openCart(){
+alert("Total produk di keranjang: "+count);
+}
+</script>
+
+</body>
+</html>
